Overflow fix

--- a/stadtgedaechtnis/static/stadtgedaechtnis/css/_styles.scss
+++ b/stadtgedaechtnis/static/stadtgedaechtnis/css/_styles.scss
@@ -176,6 +176,11 @@ section#article-section {
     * {
       margin-top: 10px;
     }
+
+    p.author {
+      text-align: right;
+      font-size: .8rem;
+    }
   }
 }
 
